# Inside_Movie

./: .gitignore  README.md  cgv_test.py  cine_test.py  get_region_code.py  mega_test.py  practice.ipynb  pyproject.toml  spark_process_etl.ipynb  test.py  test2.py  watcha_test.py  watcha_test3.py
.github/workflows/: ci-dags.yml
dags/: boxoffice_daily_crawling.py  boxoffice_daily_region_crawling.py  boxoffice_weeks_crawling.py  cgv_review_crawling.py  megabox_review_crawling.py  watcha_review_crawling.py
dags/box_office_crawler/: boxoffice_daily_crawling.py  boxoffice_daily_region_crawling.py
dags/boxoffice_crawling_and_upload/: boxoffice_daily_crawling.py  boxoffice_daily_region_crawling.py
dags/process_and_analysis/: boxoffice_genre_analysis.py  review_keyword_analysis.py  review_pipline_etl.py  review_sentiment_analysis.py
dags/review_crawler/: cgv_review_crawling.py  cine21_review_crawling.py  megabox_review_crawling.py  watcha_review_crawling.py
